<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg"
    tools:context="annie.com.generalknowledgequiz.controller.MainActivity">
    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp">
            <TextView
                android:padding="15dp"
                android:id="@+id/tvWelcomeText"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="monospace"
                android:gravity="center|top"
                android:text="Choose a language and start testing your knowledge"
                android:textAlignment="center"
                android:textColor="@color/com_facebook_button_background_color_focused"
                android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/com_facebook_auth_dialog_cancel_background"
            android:pointerIcon="hand"
            android:popupBackground="#FF000000"
            android:spinnerMode="dropdown" />
        <TextView
            android:id="@+id/tvDifficulty"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:gravity="center|top"
            android:text="@string/choose_difficulty"
            android:textAlignment="center"
            android:textColor="@color/com_facebook_button_background_color_focused"
            android:textSize="18sp"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="265dp"
            android:layout_height="54dp"
            android:orientation="horizontal"
            android:visibility="gone">
            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="monospace"
                android:text="@string/easy"
                android:buttonTint="#fff"
                android:textColor="@color/colorAccent" />
            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/medium"
                android:buttonTint="#fff"
                android:textColor="@color/colorAccent" />
            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hard"
                android:buttonTint="#fff"
                android:textColor="@color/colorAccent" />

        </RadioGroup>

        <Button
            android:id="@+id/startBtn"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:text="@string/startButton"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
