<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textViewResultsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="60dp"
        android:fontFamily="monospace"
        android:text="@string/finalActivityTitle"
        android:textColor="@color/cardview_light_background"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/myColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvScoreRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="10dp"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="10dp"
            android:background="@android:color/holo_orange_dark"
            android:backgroundTint="@color/colorPrimaryDark"
            android:isIndicator="true"
            android:max="5"
            android:stepSize="1.0"
            android:theme="@style/Base.Theme.AppCompat" />

        <TextView
            android:id="@+id/tvNumberOfQuestionsAnswered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_marginBottom="10dp"
            android:fontFamily="monospace"
            android:text="TextView"
            android:textAlignment="center"
            android:textColor="@color/cardview_light_background" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnStartNewGame"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:text="@string/startNewGameButton"
            android:textColor="@color/cardview_light_background" />

        <Button
            android:id="@+id/btnViewScores"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:text="@string/viewScoresButoon"
            android:textColor="@color/cardview_light_background" />

        <com.facebook.share.widget.ShareButton
            android:id="@+id/btnShare"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/share_facebook" />

    </LinearLayout>




</LinearLayout>