<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/bg"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:layout_marginRight="150dp"
            android:text="00:15"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNoOfQuestions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/question_no"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:background="@drawable/box"
        android:text="@string/question"
        android:textColor="@color/colorAccent"
        android:textSize="16sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        >

        <RadioButton
            android:id="@+id/optionARadioBtn"
            android:background="@drawable/radiobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:shadowColor="@android:color/holo_green_light"
            android:tag="1"
            android:text="RadioButton"
            android:fontFamily="monospace"
            android:buttonTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            />

        <RadioButton
            android:id="@+id/optionBRadioBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/radiobutton"
            android:layout_weight="1"
            android:tag="2"
            android:text="RadioButton"
            android:fontFamily="monospace"
            android:buttonTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/optionCRadioBtn"
            android:layout_width="match_parent"
            android:background="@drawable/radiobutton"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="3"
            android:text="RadioButton"
            android:fontFamily="monospace"
            android:buttonTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/optionDRadioBtn"
            android:layout_width="match_parent"
            android:background="@drawable/radiobutton"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="4"
            android:text="RadioButton"
            android:fontFamily="monospace"
            android:buttonTint="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="176dp"
        android:orientation="vertical"
        android:layout_weight="0.40">

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/nextButton"
            android:layout_margin="2dp"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/fiftyBtn"
            android:layout_margin="2dp"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:text="@string/fiftyButton"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/showAnswerBtn"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/viewAnswerButton"
            android:background="@drawable/button"
            android:fontFamily="monospace"
            android:textColor="@color/colorAccent"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/textViewAnsweredShown"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="2dp"
            android:textAlignment="center"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:background="@drawable/button"
        android:fontFamily="monospace"
        android:text="@string/cancelButton"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="visible" />

</LinearLayout>